syntax = "proto3";

package consensus;

option go_package = "/types/";

import "google/protobuf/any.proto";

enum ConsensusMessageType {
    CONSENSUS_UKNOWN_MESSAGE = 0;
    CONSENSUS_HOTSTUFF_MESSAGE = 1;
    CONSENSUS_UTILITY_TRANSACTION = 2;
}

message ConsensusMessage {
    ConsensusMessageType type = 1;
    google.protobuf.Any message = 2;
}